[gd_scene load_steps=2 format=3 uid="uid://bb6duwll0e0lm"]

[ext_resource type="Script" uid="uid://dxrepfrb11hni" path="res://scripts/game_over_screen.gd" id="1_r8qk6"]

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_r8qk6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -91.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 288.0
offset_right = 531.0
offset_bottom = 328.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 505.0
offset_right = 725.0
offset_bottom = 619.0

[node name="TryAgainButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
text = "Try again"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
